<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_FFFFFF"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingTop="27dp"
        android:paddingEnd="30dp"
        android:paddingBottom="22dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_no_screenshot" />

        <TextView
            style="@style/text_16_333333"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/icon_dot_red"
            android:drawablePadding="8dp"
            android:text="@string/no_screenshot" />

        <TextView
            style="@style/text_14_9E9E9E"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="14dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/backup_mnemonic_prompt_one" />

        <TextView
            style="@style/text_14_9E9E9E"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/backup_mnemonic_prompt_two" />

        <TextView
            android:id="@+id/confirm"
            style="@style/text_16_FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/dialog_ok" />

    </LinearLayout>

</LinearLayout>