<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp">

        <EditText
            style="@style/edit_text_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notes"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="20"
            android:textAlignment="textStart" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        app:errorEnabled="true">

        <EditText
            style="@style/edit_text_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:textAlignment="textStart" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/selectCoin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="25dp"
        android:paddingTop="2dp"
        android:paddingEnd="25dp"
        android:paddingBottom="25dp">

        <TextView
            style="@style/text_16_333333"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_coin" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/coin"
            style="@style/text_16_333333"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/confirm"
        style="@style/button_text_16"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:enabled="false"
        android:text="@string/confirm" />

</LinearLayout>